--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.3.1",
     "dotenv": "^14.3.2",
     "html-react-parser": "^1.4.6",
+    "json-server": "^0.17.0",
     "polished": "^4.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,7 +18,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-scroll-horizontal": "^1.6.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
@@ -47,6 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://127.0.0.1:8000"
+  }
 }
