--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^14.3.2",
     "html-react-parser": "^1.4.6",
     "json-server": "^0.17.0",
+    "jsonwebtoken": "^8.5.1",
     "polished": "^4.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
